# integritas-mcp-server

./: .env  .gitignore  GEMINI.md  README.md  ecosystem.config.js  gpt-playbook.md  gpt-schema.json  main.py  package-lock.json  pyproject.toml  pyproject_old.toml  schema-temp-.json  schema-templates.json  schema.json  test-proof-file.json  test-proof.txt
.github/workflow/: release.yml
GPT-agent/: api-req-res.md  gemini.md  gpt-playbook.md  gpt-schema.json  resources.md
scripts/: generate_schemas.py
src/integritas_mcp_server/: __init__.py  __main__.py  cli.py  config.py  core.py  errors.py  http_app.py  http_client.py  logging_setup.py  logging_utils.py  models.py  resources.py  secrets.py  security.py  server.py  settings.py  shared.types.ts  sse_app.py  stdio_app.py  tool_descriptions.py  tools.py  tools_auth.py  upstream.py
src/integritas_mcp_server/services/: _shared_summary.py  envelopes.py  health.py  self_health.py  stamp.py  stamp_data.py  stamp_status.py  verify_data.py
src/integritas_mcp_server/services/stamp_data_helpers/: __init__.py  api.py  mapping.py  paths.py  status.py  timeparse.py  upload.py
src/integritas_mcp_server/services/tool_helpers/: api.py  upload.py
src/integritas_mcp_server/utils/: hash.py  time.py
tests/: conftest.py  test_health_endpoint.py  test_models.py  test_server.py  test_stamp_http.py  test_stamp_status_http.py  test_stamp_status_unit.py  test_stamp_unit.py
