[project]
name = "integritas-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.10.0",
    "fastapi>=0.116.1",
    "httpx[http2]>=0.28.1",
    "mcp[cli]>=1.12.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "respx>=0.22.0",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.8",
    "trio>=0.30.0",
    "types-requests>=2.32.4.20250809",
]

[project.scripts]
integritas-mcp = "integritas_mcp_server.cli:run"

[tool.uv]
package = true
